<resources>
    <string name="app_name">Gavin</string>

    <string name="test1">Test1</string>
    <string name="test2">Test2</string>
    <string name="test3">Test3</string>
    <string name="test4">Test4</string>
    <string name="test5">Test5</string>
    <string name="test6">Test6</string>
    <string name="test7">Test7</string>
    <string name="test8">Test8</string>
    <string name="test9">Test9</string>
</resources>
